# zero2prod

./: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
.github/: general.yml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20210811071355_create_subscriptions_table.sql
scripts/: wait_for_pg.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  subsbribe.rs  subscribe.rs  utils.rs
